[project]
name = "fjformer"
authors = [{ name = "Erfan Zare Chavoshi", email = "Erfanzare810@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"

version = "0.0.82"


dependencies = [
    "jax>=0.4.33",
    "jaxlib>=0.4.33",
		"triton>=3.0",
    "optax~=0.2.2",
    "msgpack~=1.0.7",
    "ipython~=8.17.2",
    "tqdm~=4.64.1",
    "scipy==1.13.1",
    "typing~=3.7.4.3",
    "flax>=0.8.0",
    "chex>=0.1.7",
    "einops==0.8.0",
    "ml-collections==0.1.1",
    "plum-dispatch==2.3.2",
    "safetensors",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
description = "Embark on a journey of paralleled/unparalleled computational prowess with FJFormer - an arsenal of custom Jax Flax Functions and Utils that elevate your AI endeavors to new heights!"
license = { text = "Apache-2.0" }
keywords = ["JAX", "Deep Learning", "Machine Learning", "Flax", "XLA"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.setuptools.packages]

find = { where = ["src"] }

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"env.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
"test/*"=["E402"]
"**/pallas_operations/*"=["E741","E731","B011"]

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "double"
indent-style = "tab"
docstring-code-format = true


[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 2