[tool.poetry]
name = "fjformer"
authors = ["Erfan Zare Chavoshi <Erfanzare810@gmail.com>"]
readme = "README.md"
version = "0.0.84"

classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]
description = "Embark on a journey of paralleled/unparalleled computational prowess with FJFormer in JAX"

license = "Apache-2.0"
keywords = ["JAX", "Deep Learning", "Machine Learning", "Flax", "XLA"]

homepage = "https://github.com/erfanzar/FJFormer"
repository = "https://github.com/erfanzar/FJFormer"
documentation = "https://erfanzar.github.io/FJFormer"

[tool.poetry.dependencies]
python = "^3.10"
jax = ">=0.4.35"
jaxlib = ">=0.4.35"
triton = ">=3.0"
optax = "~0.2.2"
msgpack = "~1.0.7"
ipython = "~8.17.2"
tqdm = "~4.64.1"
scipy = "1.13.1"
typing = "~3.7.4.3"
flax = ">=0.8.0"
chex = ">=0.1.7"
einops = "0.8.0"
ml-collections = "0.1.1"
plum-dispatch = "2.3.2"
safetensors = "*"
aqtp = "^0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501"]
unfixable = ["B"]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"env.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
"test/*" = ["E402"]
"**/pallas_operations/*" = ["E741", "E731", "B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true


[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 2
