[tool.poetry]
name = "eformer"
authors = ["Erfan Zare Chavoshi <Erfanzare810@gmail.com>"]
readme = "README.md"
version = "0.0.3"

classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
]
description = "(EasyDel Former) is a utility library designed to simplify and enhance the development in JAX"

license = "Apache-2.0"
keywords = ["JAX", "Deep Learning", "Machine Learning", "Flax", "XLA"]

homepage = "https://github.com/erfanzar/eformer"
repository = "https://github.com/erfanzar/eformer"
documentation = "https://erfanzar.github.io/eformer"

[tool.poetry.dependencies]
python = "^3.10"
jax = ">=0.4.34"
optax = ">=0.2.2"
chex = "*"
ml-collections = "0.1.1"
plum-dispatch = "2.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["E501", "B905", "B007"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]
"tests/*" = ["E402", "E731", "F403", "F405"]
"benchmarks/*" = ["E402", "E731"]
"triton_*" = ["E741", "ISC001", "E501", "E731"]
"pallas_*" = ["E741", "ISC001", "E501", "E731"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 2
